<resources>
    <string name="app_name">Coffe Mangement</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="khongduocdetrong">Bạn không được để trống!!!</string>

    <string name="email">Email</string>
    <string name="emailExample">anhkietxl051197@gmail.com</string>
    <string name="matkhau">Mật khẩu</string>

    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="soluong">Số lượng</string>
    <string name="thanhtien">Thành tiền</string>
    <string name="goimon">Gọi món</string>
    <string name="chuyensangban">Chuyển sang bàn</string>
    <string name="banan">Bàn ăn</string>
    <string name="tru">-</string>
    <string name="soluongmacdinh">1</string>
    <string name="cong">+</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="dongia">Đơn giá</string>
    <string name="thoat">Thoát</string>
    <string name="tongcong">Tổng cộng:</string>
</resources>
