<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/itemOder"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size5dp">

    <TextView
        android:id="@+id/txtFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenmonan"
        android:textSize="16sp"
        android:layout_weight="2"
        android:layout_margin="@dimen/size5dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tru"
        android:layout_margin="@dimen/size5dp"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/edCountFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soluongmacdinh"
        android:inputType="number"
        android:layout_margin="@dimen/size5dp"
        android:background="@android:color/transparent"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtCountUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cong"
        android:layout_margin="@dimen/size5dp"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dongia"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_margin="@dimen/size5dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanhtien"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_margin="@dimen/size5dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black" />
</LinearLayout>