<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dangnhap"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/matkhau"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/dangnhap"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white">
            </Button>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>